virt01/manual/torrent/readarr-glasses/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
#      annotations:
#        backup.velero.io/backup-volumes-excludes: torrent,tvshows
#        backup.velero.io/backup-volumes: readarr-pv
      labels:
        app: readarr
    spec:
      serviceAccountName: readarr-sa
      containers:
        - name: readarr
          image: blampe/rreading-glasses:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8788
              name: readarr-port
              protocol: TCP
          # resources:
          #   requests:
          #     cpu: 20m
          #     memory: 100Mi
#           volumeMounts:
#             - name: readarr-pv
#               mountPath: /config
#             - name: books
#               mountPath: /books
#             - name: torrent
#               mountPath: /data
#       volumes:
#         - name: readarr-pv
#           persistentVolumeClaim:
#             claimName: readarr-pvc
#         - name: books
# #          nfs:
#           hostPath:
#             path: /mnt/hdd01/Books
#             type: Directory
# #            server: 10.0.0.100
#         - name: torrent
# #          nfs:
#           hostPath:
# #          nfs:
#             path: /mnt/hdd01/torrent
#             type: Directory
# #            server: 10.0.0.100
