virt01/manual/torrent/readarr-glasses/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-svc
  labels:
    app: readarr
spec:
  ports:
    - port: 8788
      protocol: TCP
      name: readarr-svc-port
  selector:
    app: readarr
